# NIPM-HLSP

./: .gitignore  CMakeLists.txt  README.md  license.txt
nipm_hlsp/: data.cpp  data.h  hlsp.cpp  hlsp.h  lagrangian.cpp  lagrangian.h  level.cpp  level.h  levelShared.cpp  levelShared.h  newton.cpp  newton.h  nipm_hlsp.cpp  nipm_hlsp.h  options.h  typedefs.h
tests/: CMakeLists.txt  test1.cpp
